components/platform/platform-security/sealed-secrets/base/netpol-sealed-secrets.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-netpol-sealed-secrets
  namespace: sealed-secrets
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sealed-secrets
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Kube API Proxy (for kubeseal) & Kubelet Probes
    - ports:
        - protocol: TCP
          port: 8080

    # Metrics scraping by OTel Collector
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
      ports:
        - protocol: TCP
          port: 8081
  egress:
    # Communication with Kube-API
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443

    # DNS Resolution
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
